--- a/dhoni.html
+++ b/dhoni.html
@@ -89,7 +89,7 @@ span{
     <form action="ankitbairagi.html"id="signUpform" onsubmit="handlesubmit(event)">
 a
     <div id="maincon">
-        <h1> Registeration form</h1>
+        <h1> Registeration link</h1>
         <hr>
              <Label for="fname"> Enter your First Name</Label>
             <input type="text" id="fname" placeholder="Enter your name" required>
